--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "winston": "^3.10.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.6.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "nodemon": "^3.0.1",
-    "prettier": "^3.0.1"
+    "prettier": "^3.0.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
