--- a/package.json
+++ b/package.json
@@ -1,33 +1,38 @@
 {
-  "name": "tetris-multiplayer",
-  "version": "1.0.0",
-  "description": "",
-  "main": "src/index.js",
-  "scripts": {
-    "start": "node src/index",
-    "dev": "nodemon src/index",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Bharat Thakur",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.1",
-    "mongodb": "^5.7.0",
-    "socket.io": "^4.7.2",
-    "winston": "^3.10.0"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.6.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "nodemon": "^3.0.1",
-    "prettier": "^3.0.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
-  }
+    "name": "tetris-multiplayer",
+    "version": "1.0.0",
+    "description": "",
+    "main": "src/index.ts",
+    "scripts": {
+        "start": "ts-node src/index.ts",
+        "dev": "nodemon",
+        "build": "npx tsc",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "Bharat Thakur",
+    "license": "ISC",
+    "dependencies": {
+        "body-parser": "^1.20.2",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.1",
+        "mongodb": "^5.7.0",
+        "socket.io": "^4.7.2",
+        "ts-node": "^10.9.1",
+        "typescript": "^5.2.2",
+        "winston": "^3.10.0"
+    },
+    "devDependencies": {
+        "@types/express": "^4.17.17",
+        "@types/jsonwebtoken": "^9.0.3",
+        "@types/mongodb": "^4.0.7",
+        "@types/node": "^20.6.0",
+        "@types/socket.io": "^3.0.2",
+        "@types/winston": "^2.4.4",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-prettier": "^5.0.0",
+        "nodemon": "^3.0.1",
+        "prettier": "^3.0.1"
+    }
 }
