--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "",
     "main": "src/index.ts",
     "scripts": {
-        "start": "ts-node src/index.ts",
-        "dev": "nodemon",
-        "build": "npx tsc",
+        "start": "tsc && node dist/index.js",
+        "dev": "nodemon src/index.ts",
+        "build": "tsc",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Bharat Thakur",
@@ -19,8 +19,6 @@
         "jsonwebtoken": "^9.0.1",
         "mongodb": "^5.7.0",
         "socket.io": "^4.7.2",
-        "ts-node": "^10.9.1",
-        "typescript": "^5.2.2",
         "winston": "^3.10.0"
     },
     "devDependencies": {
@@ -33,6 +31,8 @@
         "eslint-config-prettier": "^9.0.0",
         "eslint-plugin-prettier": "^5.0.0",
         "nodemon": "^3.0.1",
-        "prettier": "^3.0.1"
+        "prettier": "^3.0.1",
+        "ts-node": "^10.9.1",
+        "typescript": "^5.2.2"
     }
 }
