--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,13 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        NODE_ENV: development
     environment:
       - CONNECTION_URL=mongodb://mongo:27017
       - SECRET_KEY=CAN_CHANGE_TO_ANYTHING
       - PORT=3000
-      - ENV=dev
+      - NODE_ENV=development
     ports:
       - '3000:3000'
     volumes:
