--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
         "module": "CommonJS",
         "outDir": "./dist",
         "rootDir": "./src",
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "resolveJsonModule": true,
+        "moduleResolution": "Node"
     },
     "include": ["src/**/*.ts"],
 }
