--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,3 +28,8 @@ services:
       - '27017:27017'
     environment:
       - ALLOW_EMPTY_PASSWORD=yes
+    volumes:
+      - mongo_dump:/data/db
+
+volumes:
+  mongo_dump:
