--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "author": "Bharat Thakur",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^5.1.1",
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
@@ -22,6 +23,7 @@
         "winston": "^3.10.0"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.2",
         "@types/express": "^4.17.17",
         "@types/jsonwebtoken": "^9.0.3",
         "@types/node": "^20.6.0",
