--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "jsonwebtoken": "^9.0.1",
         "mongodb": "^5.7.0",
         "socket.io": "^4.7.2",
+        "uuidv4": "^6.2.13",
         "winston": "^3.10.0"
     },
     "devDependencies": {
