--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,9 @@ services:
       - SECRET_KEY=CAN_CHANGE_TO_ANYTHING
       - PORT=5000
       - NODE_ENV=development
+      - REDIS_HOST=cache
+      - REDIS_PORT=6379
+      - REDIS_PASSWORD=eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81
     ports:
       - '5000:5000'
     volumes:
@@ -30,6 +33,16 @@ services:
       - ALLOW_EMPTY_PASSWORD=yes
     volumes:
       - mongo_dump:/data/db
+  
+  cache:
+    image: redis:6.2-alpine
+    restart: always
+    ports:
+      - '6379:6379'
+    command: redis-server --save 20 1 --loglevel warning --requirepass eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81
+    volumes: 
+      - cache:/data
 
 volumes:
   mongo_dump:
+  cache:
