--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,10 @@
-version: '3'
+version: '3.8'
 
 services:
   express:
     depends_on:
       - mongo
+      - redis
     build:
       context: .
       dockerfile: Dockerfile
@@ -14,16 +15,14 @@ services:
       - SECRET_KEY=CAN_CHANGE_TO_ANYTHING
       - PORT=5000
       - NODE_ENV=development
-      - REDIS_HOST=cache
+      - REDIS_HOST=redis
       - REDIS_PORT=6379
-      - REDIS_PASSWORD=eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81
     ports:
       - '5000:5000'
     volumes:
       - ./src:/app/src
       - ./package.json:/app/package.json
-    command:
-      npm run dev
+    command: npm run dev
 
   mongo:
     image: mongo:5.0.18
@@ -33,16 +32,15 @@ services:
       - ALLOW_EMPTY_PASSWORD=yes
     volumes:
       - mongo_dump:/data/db
-  
-  cache:
-    image: redis:6.2-alpine
-    restart: always
+
+  redis:
+    image: redis/redis-stack:latest
     ports:
       - '6379:6379'
-    command: redis-server --save 20 1 --loglevel warning --requirepass eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81
-    volumes: 
-      - cache:/data
+      - '8001:8001'
+    volumes:
+      - redis_dump:/data
 
 volumes:
   mongo_dump:
-  cache:
+  redis_dump:
