--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
+        "email-validator": "^2.0.4",
         "express": "^4.18.2",
         "ioredis": "^5.3.2",
         "jsonwebtoken": "^9.0.1",
