--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "",
     "main": "src/index.ts",
     "scripts": {
-        "start": "tsc && node dist/index.js",
-        "dev": "nodemon src/index.ts",
-        "build": "tsc && cp -r src/web/ dist/web/",
+        "start": "node node_modules/.bin/tsc && node dist/index.js",
+        "dev": "node node_modules/.bin/nodemon",
+        "build": "node node_modules/.bin/tsc && cp -r src/web/ dist/web/",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Bharat Thakur",
