--- a/.eslintrc
+++ b/.eslintrc
@@ -5,19 +5,33 @@
         "node": true
     },
     "extends": [
-        "prettier"
+        "prettier",
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended"
     ],
+    "parser": "@typescript-eslint/parser",
     "plugins": [
-        "prettier"
+        "prettier",
+        "@typescript-eslint"
     ],
     "globals": {
         "Atomics": "readonly",
         "SharedArrayBuffer": "readonly"
     },
     "parserOptions": {
-        "ecmaVersion": 2023
+        "ecmaVersion": 2023,
+        "sourceType": "module"
     },
     "rules": {
-        "prettier/prettier": "error"
+        "semi": [
+            "error",
+            "always"
+        ],
+        "quotes": [
+            "error",
+            "single"
+        ],
+        "@typescript-eslint/no-unused-vars": "error",
+        "@typescript-eslint/no-explicit-any": "off"
     }
 }
