--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "start": "node node_modules/.bin/tsc && node dist/index.js",
         "dev": "node node_modules/.bin/nodemon",
         "build": "node node_modules/.bin/tsc && cp -r src/web/ dist/web/",
+        "lint": "node node_modules/.bin/eslint src/**/*.ts",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Bharat Thakur",
@@ -26,15 +27,24 @@
         "winston": "^3.10.0"
     },
     "devDependencies": {
+        "@eslint/eslintrc": "^3.0.2",
+        "@eslint/js": "^9.1.1",
         "@types/bcrypt": "^5.0.2",
         "@types/express": "^4.17.17",
         "@types/jsonwebtoken": "^9.0.3",
         "@types/node": "^20.6.0",
+        "@typescript-eslint/eslint-plugin": "^6.21.0",
+        "eslint": "^8.57.0",
         "eslint-config-prettier": "^9.0.0",
+        "eslint-config-standard-with-typescript": "^43.0.1",
+        "eslint-plugin-import": "^2.29.1",
+        "eslint-plugin-n": "^16.6.2",
         "eslint-plugin-prettier": "^5.0.0",
+        "eslint-plugin-promise": "^6.1.1",
+        "globals": "^15.0.0",
         "nodemon": "^3.0.1",
         "prettier": "^3.0.1",
         "ts-node": "^10.9.1",
-        "typescript": "^5.2.2"
+        "typescript": "^5.4.5"
     }
 }
