--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "description": "",
     "main": "src/index.ts",
+    "type": "module",
     "scripts": {
         "start": "node node_modules/.bin/tsc && node dist/index.js",
         "dev": "node node_modules/.bin/nodemon",
@@ -18,10 +19,10 @@
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "email-validator": "^2.0.4",
-        "express": "^4.18.2",
+        "express": "^4.19.2",
         "ioredis": "^5.3.2",
         "jsonwebtoken": "^9.0.1",
-        "mongodb": "^5.7.0",
+        "mongodb": "^6.5.0",
         "socket.io": "^4.7.2",
         "uuidv4": "^6.2.13",
         "winston": "^3.10.0"
