--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,8 @@
     "extends": [
         "prettier",
         "eslint:recommended",
-        "plugin:@typescript-eslint/recommended"
+        "plugin:@typescript-eslint/recommended",
+        "plugin:@typescript-eslint/eslint-recommended"
     ],
     "parser": "@typescript-eslint/parser",
     "plugins": [
