--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-      args:
-        NODE_ENV: development
+      target: dev
     environment:
       - CONNECTION_URL=mongodb://mongo:27017
       - SECRET_KEY=CAN_CHANGE_TO_ANYTHING
