--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "author": "Bharat Thakur",
     "license": "ISC",
     "dependencies": {
+        "@socket.io/redis-adapter": "^8.3.0",
         "bcrypt": "^5.1.1",
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
