--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "start": "node dist/index.js",
         "dev": "node node_modules/.bin/nodemon",
         "build": "node node_modules/.bin/tsc && cp -r src/web/ dist/web/",
-        "lint": "node node_modules/.bin/eslint --fix src/**/*.ts src/*.ts",
+        "lint": "node node_modules/.bin/eslint src/**/*.ts src/*.ts",
+        "lint:fix": "node node_modules/.bin/eslint --fix src/**/*.ts src/*.ts",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Bharat Thakur",
