--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "dotenv": "^16.3.1",
         "email-validator": "^2.0.4",
         "express": "^4.19.2",
+        "express-rate-limit": "^7.3.1",
         "ioredis": "^5.3.2",
         "jsonwebtoken": "^9.0.1",
         "mongodb": "^6.5.0",
