--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "start": "node dist/index.js",
         "dev": "node node_modules/.bin/nodemon",
         "build": "node node_modules/.bin/tsc && cp -r src/web/ dist/web/",
-        "lint": "node node_modules/.bin/eslint --fix src/**/*.ts src/*.ts",
+        "lint": "node node_modules/.bin/eslint src/**/*.ts src/*.ts",
+        "lint:fix": "node node_modules/.bin/eslint --fix src/**/*.ts src/*.ts",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Bharat Thakur",
@@ -20,6 +21,7 @@
         "dotenv": "^16.3.1",
         "email-validator": "^2.0.4",
         "express": "^4.19.2",
+        "express-rate-limit": "^7.3.1",
         "ioredis": "^5.3.2",
         "jsonwebtoken": "^9.0.1",
         "mongodb": "^6.5.0",
