--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "ioredis": "^5.3.2",
         "jsonwebtoken": "^9.0.1",
         "mongodb": "^6.5.0",
+        "npm": "^11.6.2",
         "socket.io": "4.7.2",
         "typescript": "^5.4.5",
         "uuidv4": "^6.2.13",
